--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
       <div class="copyright">
         <span
-          >© 2025 Peirong Liu
+          >Adapted from © 2025 Peirong Liu
       </div>
     
   </div>
