--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="/img/ldr.jpg"/>
       <title>
         Home ::
-        Peirong Liu
+        Hasan Ubaid Ullah
       </title>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVSSSF5QW4"></script>
