--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Peirong Liu"/>
+<meta name="twitter:title" content="Hasan Ubaid Ullah"/>
 <meta name="twitter:description" content=""/>
 
 
 
-<meta property="og:title" content="Peirong Liu" />
+<meta property="og:title" content="Hasan Ubaid Ullah" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" /><meta property="og:site_name" content="Peirong Liu" />
+<meta property="og:url" content="/" /><meta property="og:site_name" content="Hasan Ubaid Ullah" />
 
 
 
 
-<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Peirong Liu" />
+<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Hasan Ubaid Ullah" />
 
 
 
@@ -82,7 +82,7 @@
 </svg>
 </span>
     <span class="logo__text"
-      >$ cd /home/peirong</span
+      >$ cd /home/hasan</span
     >
     <span class="logo__cursor"></span>
   
@@ -165,29 +165,29 @@
   <figure>
     <img src="img/members/Peirong.jpeg" width="280">
     <figcaption>
-      <h1 style="text-align:center;" >Peirong Liu</h1> 
+      <h1 style="text-align:center;" >Hasan Ubaid Ullah</h1> 
     <center>
     <p  style="text-align:center;">
-      <a href=mailto:peirong@jhu.edu target=_blank rel=noopener title=Email>
+      <a href=mailto:hasancnpk@gmail.com target=_blank rel=noopener title=Email>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M4 4h16c1.1.0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1.0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg></a>&nbsp;&nbsp; 
-      <a href='https://scholar.google.com/citations?user=x12zA5gAAAAJ&hl=en' target=_blank rel=noopener title= 'Google Scholar'>
+      <a href='https://scholar.google.com/citations?user=kZpTQj8AAAAJ&hl=en' target=_blank rel=noopener title= 'Google Scholar'>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"> 
           <path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg></a>&nbsp;&nbsp;
-      <a href=https://www.linkedin.com/in/peirongliu/ target=_blank rel=noopener title=Linkedin>
+      <a href=https://www.linkedin.com/in/hasanbinubaidullah/ target=_blank rel=noopener title=Linkedin>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/>
           <rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a>&nbsp;&nbsp; 
-      <a href="https://github.com/jhuldr" target=_blank rel=noopener title=Github>
+      <a href="https://github.com/hasaneve" target=_blank rel=noopener title=Github>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg></a>&nbsp;&nbsp; 
-      <a href=https://x.com/peirong26 target=_blank rel=noopener title=Twitter>
+      <a href=https://x.com/hasancnpk target=_blank rel=noopener title=Twitter>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/>
         </svg></a>&nbsp;&nbsp; 
     </p>
-    <p><strong style="text-align:center;line-height:15px;">Assistant Professor in ECE & DSAI @ Johns Hopkins University</strong></p>
-    <p><strong style="text-align:center;line-height:15px;">AI for Health | Generative AI | Computer Vision | Medical Imaging </strong></p>
+    <p><strong style="text-align:center;line-height:15px;">Masters of Engineering (M.Eng.) in Environmental Engineering</strong></p>
+    <p><strong style="text-align:center;line-height:15px;">Aquatic Chemistry | Pollution Control | Novel Adsorbents and Membrane Development </strong></p>
     <a>
       
     <span style="font-size:larger;color:rgba(0, 119, 216, 0.8);">&starf;</span><span style="font-size:larger;color:rgba(104, 172, 229, 0.8);">&starf;</span> 
