--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
  
  
   <figure>
-    <img src="img/members/Peirong.jpeg" width="280">
+    <img src="img/members/Hasan.png" width="280">
     <figcaption>
       <h1 style="text-align:center;" >Hasan Ubaid Ullah</h1> 
     <center>
