--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <figure>
     <img src="img/members/Hasan.png" width="280">
     <figcaption>
-      <h1 style="text-align:center;" >Hasan Ubaid Ullah</h1> 
+      <h1 style="text-align:center;" >HASAN UBAIDULLAH</h1> 
     <center>
     <p  style="text-align:center;">
       <a href=mailto:hasancnpk@gmail.com target=_blank rel=noopener title=Email>
