--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
  
       
-  <p>My name is Peirong Liu (刘沛榕), I am an assistant professor of <a href="https://engineering.jhu.edu/faculty/peirong-liu/" style="text-decoration:none;color:rgba(0, 119, 216, 0.8);" target="_blank" rel="noopener noreferrer">Electrical and Computer Engineering (ECE)</a> 
+  <p>My name is Hasan Ubaidullah (刘沛榕), I am an assistant professor of <a href="https://engineering.jhu.edu/faculty/peirong-liu/" style="text-decoration:none;color:rgba(0, 119, 216, 0.8);" target="_blank" rel="noopener noreferrer">Electrical and Computer Engineering (ECE)</a> 
     at the <a href="https://www.jhu.edu/" style="text-decoration:none;color:rgba(0, 119, 216, 0.8);" target="_blank" rel="noopener noreferrer">Johns Hopkins University</a>, 
     affiliated with the <a href="https://ai.jhu.edu/" style="text-decoration:none;color:rgba(0, 119, 216, 0.8);" target="_blank" rel="noopener noreferrer">Data Science and Artificial Intelligence (DSAI) Institute</a>. 
   </p>
