--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </svg></a>&nbsp;&nbsp; 
     </p>
     <p><strong style="text-align:center;line-height:15px;">Masters of Engineering (M.Eng.) in Environmental Engineering</strong></p>
-    <p><strong style="text-align:center;line-height:15px;">Aquatic Chemistry | Pollution Control | Novel Adsorbents and Membrane Development </strong></p>
+    <p><strong style="text-align:center;line-height:15px;">Aquatic Chemistry | Pollution Control | Novel Materials for Clean Water </strong></p>
     <a>
       
     <span style="font-size:larger;color:rgba(0, 119, 216, 0.8);">&starf;</span><span style="font-size:larger;color:rgba(104, 172, 229, 0.8);">&starf;</span> 
