--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="/img/ldr.jpg"/>
       <title>
         Home ::
-        Hasan Ubaid Ullah
+        Hasan Ubaidullah
       </title>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVSSSF5QW4"></script>
@@ -48,12 +48,12 @@
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Hasan Ubaid Ullah"/>
+<meta name="twitter:title" content="Hasan Ubaidullah"/>
 <meta name="twitter:description" content=""/>
 
 
 
-<meta property="og:title" content="Hasan Ubaid Ullah" />
+<meta property="og:title" content="Hasan Ubaidullah" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" /><meta property="og:site_name" content="Hasan Ubaid Ullah" />
@@ -61,7 +61,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Hasan Ubaid Ullah" />
+<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Hasan Ubaidullah" />
 
 
 
